# pilah

./: .coveragerc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  paper.bib  paper.md  pyi_rth_obdata.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt
docs/usage/: gettingstarted.md  installation.md  usecases.md
examples/: config_mol2_gok.txt  config_pdb_4hi.txt  config_pdb_4hi_ligand_resnum_2.txt  config_pdb_4hi_multichain.txt  config_pdb_b49.txt  config_pdb_fap_altloc_ligand.txt  config_pdb_gok.txt  config_pdb_hux.txt  config_pdb_ui3.txt  config_pdbqt_b49.txt  config_pdbqt_gok.txt  config_pdbqt_gok_nometal.txt  config_pdbqt_hux.txt  config_sdf_gok.txt
src/pilah/: __init__.py  atom_names.py  element.py  extract.py  logger.py  parser.py  pilah.py  protonate.py  writer.py
src/pilah/dimorphite_dl/: dimorphite_dl.py
src/pilah/meeko/data/: residue_params.json
src/pilah/pKAI/: pKAI.py  protein.py  residue.py
tests/: conftest.py  helpers.py  test_extract.py  test_logger.py  test_parser.py  test_pilah.py  test_protonate.py  test_writer.py
tests/data/: 6hsh.cif  added_records.py  atom_name_per_residue.py  config_pdb_gok.txt  config_pdb_gok_all.txt  config_pdb_gok_missing.txt  config_pdb_gok_warning.txt  ionization_data.py  pkai_data.py
tests/utils/: helpers.py
