[tool.poetry]
name = "pilah"
version = "0.0.0"
description = "Protein Ligand Abstraction and Hydrogenization tool"
authors = ["Muhammad Radifar", "Enade Perdana Istyastono"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2023.9.5"
biopython = "^1.83"
rich = "^13.7.1"
typer = "^0.12.3"
meeko = "^0.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"

[tool.poetry.scripts]
pilah = "pilah.pilah:app"
pKAI = "pilah.pKAI.pKAI:main"
dimorphite_dl = "pilah.dimorphite_dl.dimorphite_dl:main"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
